codama-macros/tests/codama_attribute/enum_discriminator_directive/too_many_names.fail.rs
use codama_macros::codama;

#[codama(enum_discriminator(name = "apple", name = "banana"))]
pub struct Test;

fn main() {}
